# shelly

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: builtin.rs  command.rs  completion.rs  error.rs  lib.rs  main.rs  shell.rs
